--- a/ms.Rmd
+++ b/ms.Rmd
@@ -55,6 +55,7 @@ library(lme4)
 library(ggh4x)
 library(emmeans)
 library(ggside)
+library(Hmisc)
 library(ggbeeswarm)
 library(broom.mixed)
 library(patchwork)
